--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev:server": "json-server server.json -p 3333 -w -d 500",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "lint": "npx eslint src --ext .tsx,.ts", 
+    "lint": "npx eslint src --ext .tsx,.ts",
     "lint:fix": "npx eslint src --ext .tsx,.ts --fix"
   },
   "dependencies": {
@@ -20,7 +20,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.41.5",
+    "scheduler": "^0.23.0",
     "styled-components": "^5.3.6",
+    "use-context-selector": "^1.4.1",
     "zod": "^3.20.2"
   },
   "devDependencies": {
