--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "dev:server": "json-server server.json -p 3333 -w -d 500",
+    "dev:server": "json-server server.json -p $PORT -w",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "lint": "npx eslint src --ext .tsx,.ts",
